responsive cassé à 980px, mais globalement fait

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=c55d32cd18db53f3c472d21a199bfd07
 ###< symfony/framework-bundle ###
 
